Mon Apr 12 09:31:54 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * bin/PerlACE/TestTarget_WinCE.pm:
        * bin/PerlACE/ProcessVX_Win32.pm:
        * bin/PerlACE/Process_Unix.pm:
        * bin/PerlACE/ProcessLVRT.pm:
        * bin/PerlACE/TestTarget.pm:
        * bin/PerlACE/TestTarget_VxWorks.pm:
        * bin/PerlACE/ProcessVX.pm:
        * bin/PerlACE/TestTarget_LVRT.pm:
        * bin/PerlACE/ProcessVX_Unix.pm:
        * bin/PerlACE/Process_Win32.pm:
        * bin/PerlACE/Run_Test.pm:
        * bin/PerlACE/Process_VMS.pm:
        
          Added support for running multiplatform tests using remote shell 
          connections.
          Currently only supported for *nix-like platforms 
          (like Linux PPC64 <-> Linux x86_64).

Thu Apr  8 21:25:54 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * ace/OS_NS_netdb.cpp:

          Fixed compile time error encountered in MAC and iPhone platforms.

Thu Apr  8 14:51:45 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * docs/ACE-guidelines.html: Clarified the style recommendations
          for loop and if statement bodies.

Wed Apr  7 16:27:46 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/cle.pl:

          Added the ability to use an environment variable (CL_CHANGELOG_FILE)
          to specify the name of the ChangeLog file to use.

Tue Apr  6 14:37:38 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ACE-INSTALL.html (http): Updated the link to the OCI MPC
          website.  Thanks to Tim <tim at burmair dot com> for suggesting
          this.

Wed Apr  7 07:06:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/global.features:
          ccm_lw is disabled by default

Tue Apr 06 06:08:48 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/os_stddef.h:
          Fixed incorrect semicolon

        * ace/OS_NS_netdb.cpp:
          Initialise pointers to 0

        * configure.ac: